--- a/neogpt/ui/templates/index.html
+++ b/neogpt/ui/templates/index.html
@@ -5,75 +5,278 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NeoGPT</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <link
+    rel="stylesheet"
+    href="{{url_for('static',path='./css/out.css')}}"
+  /> -->
+
+    <script defer src="{{url_for('static',path='./js/theme.js')}}"></script>
+
 
 </head>
 
-<body class="flex flex-row h-screen overflow-hidden">
+<body class="flex flex-row h-screen dark:bg-[#181818] bg-slate-100 overflow-hidden">
     <!-- Left Sidebar -->
-    <aside id="leftSidebar" class="w-60 m-2 rounded-lg bg-black  transition-transform duration-300 transform">
-        Left Sidebar
+    <aside id="leftSidebar"
+        class="w-60 dark:bg-zinc-900 bg-white dark:text-gray-200 text-black transition-transform duration-200 transform">
+        <div class="">
+            <!-- <img src="https://raw.githubusercontent.com/neokd/NeoGPT/f04841e9afbac5bf426aca3619cd86a464da4932/docs/assets/dark.png" alt="logo" class="dark:block hidden bg-transparent">
+            <img src="https://raw.githubusercontent.com/neokd/NeoGPT/f04841e9afbac5bf426aca3619cd86a464da4932/docs/assets/light.png" alt="logo" class="dark:hidden visible"> -->
+
+            <div class="flex items-center justify-center">
+                <h1 class="text-4xl dark:text-gray-200 my-4 font-bold text-cente">NeoGPT</h1>
+            </div>
+        </div>
+
     </aside>
 
     <!-- Main Content -->
-    <main id="mainContent" class="flex flex-col flex-1 h-screen transition-margin duration-300">
+    <main id="mainContent" class="flex flex-col flex-1 dark:bg-neutral-800 h-screen transition-margin duration-300">
         <!-- Navbar -->
-        <nav class="flex items-center justify-between px-6 py-4 bg-gray-300">
+        <nav
+            class="flex items-center justify-between px-6 py-4 bg-white bg-clip-padding backdrop-filter backdrop-blur-sm  bg-white dark:bg-zinc-900 dark:text-gray-100">
             <!-- Left Sidebar toggle button -->
-            
-
             <div>
-                <h1 class="lg:text-2xl text-lg font-bold text-gray-800">NeoGPT</h1>
+                <h1 class="lg:text-2xl  text-lg ">V0.2.0</h1>
             </div>
-            <div>
+            <div class="space-x-2">
+
+                <button id="theme-toggle" type="button"
+                    class=" dark:text-white bg-gray-200  hover:bg-red-500 hover:text-white dark:hover:bg-red-500 dark:bg-zinc-700 p-2 rounded-full focus:outline-none text-md p-2.5">
+                    <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+                    </svg>
+                    <svg id="theme-toggle-light-icon" class="hidden w-5 h-5  " fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                            fill-rule="evenodd" clip-rule="evenodd"></path>
+                    </svg>
+                </button>
                 <button id="toggleLeftSidebarButton"
-                class="p-2 bg-gray-500 text-white rounded focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-panel-right-close"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M15 3v18"/><path d="m8 9 3 3-3 3"/></svg>
-            </button>
-                <button id="toggleRightSidebarButton" 
-                    class=" p-2 bg-gray-500 text-white rounded focus:outline-none">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-panel-right-open"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M15 3v18"/><path d="m10 15-3-3 3-3"/></svg>
+                    class="p-2  dark:text-white bg-gray-200  hover:bg-red-500 hover:text-white dark:hover:bg-red-500 dark:bg-zinc-700 rounded-full focus:outline-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-panel-right-close">
+                        <rect width="18" height="18" x="3" y="3" rx="2" />
+                        <path d="M15 3v18" />
+                        <path d="m8 9 3 3-3 3" />
+                    </svg>
+                </button>
+                <button id="toggleRightSidebarButton" disabled
+                    class="dark:text-white hover:bg-red-500 hover:text-white dark:hover:bg-red-500 bg-gray-200 dark:bg-zinc-700 p-2 rounded-full focus:outline-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-panel-right-open">
+                        <rect width="18" height="18" x="3" y="3" rx="2" />
+                        <path d="M15 3v18" />
+                        <path d="m10 15-3-3 3-3" />
+                    </svg>
                 </button>
             </div>
         </nav>
+        <div class="flex flex-col flex-1 items-center">
+            <!-- Chat -->
+            <div class="flex-1 dark:text-slate-100">
+                <div class="flex-1 overflow-y-auto rounded-xl p-4 text-sm leading-6  sm:text-base sm:leading-7">
 
-        <!-- Chat -->
-        <div class="flex-1 ">
-            <h1 class="text-lg font-semibold text-gray-800 text-center">Chat</h1>
+                    <ul id="chat-messages" class="overflow-y-auto flex-1"></ul>
+
+                </div>
+            </div>
+            <!-- Input -->
+            <div class="mb-8 w-full max-w-4xl absolute bottom-0">
+                <!-- Button above input -->
+                <div class="mt-4 flex justify-center">
+                    <button
+                        class="inline-flex items-center gap-x-2 rounded-lg  p-2 text-xs  outline outline-red-500 dark:text-gray-100 hover:bg-red-500 duration-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="inline h-4 w-4" viewBox="0 0 24 24"
+                            stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M19.933 13.041a8 8 0 1 1 -9.925 -8.788c3.899 -1 7.935 1.007 9.425 4.747">
+                            </path>
+                            <path d="M20 4v5h-5"></path>
+                        </svg>
+                        Regenerate response
+                    </button>
+                </div>
+                <!-- Rounded input -->
+                <form id="chat-form">
+                    <label for="chat-input" class="sr-only">Enter your prompt</label>
+                    <div class="relative shadow shadow-lg">
+                        <button type="button"
+                            class="absolute inset-y-0 left-0 flex items-center pl-3 text-slate-500 hover:text-red-500 dark:text-slate-50 duration-300 dark:hover:text-red-500">
+                            <svg aria-hidden="true" class="h-5 w-5" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke="currentColor" fill="none"
+                                stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M9 2m0 3a3 3 0 0 1 3 -3h0a3 3 0 0 1 3 3v5a3 3 0 0 1 -3 3h0a3 3 0 0 1 -3 -3z">
+                                </path>
+                                <path d="M5 10a7 7 0 0 0 14 0"></path>
+                                <path d="M8 21l8 0"></path>
+                                <path d="M12 17l0 4"></path>
+                            </svg>
+                            <span class="sr-only">Use voice input</span>
+                        </button>
+                        <input id="chat-input"
+                            class="mt-2 block w-full resize-none rounded-xl  p-4 pl-10 pr-20 text-sm dark:text-slate-50 text-slate-900 shadow-md dark:bg-neutral-900 sm:text-base"
+                            placeholder="Enter your prompt" rows="1" required />
+                        <button type="submit"
+                            class="absolute bottom-2 right-2.5 rounded-lg  px-4 py-2 text-sm font-medium outline outline-red-500 dark:text-gray-100 hover:bg-red-500 duration-300">
+                            Send
+                        </button>
+                    </div>
+                </form>
+
+            </div>
         </div>
 
-        <!-- Input -->
-        <div class="">
-            <h1 class="text-lg font-semibold text-gray-800 text-center">Input</h1>
-        </div>
     </main>
 
     <!-- Right Sidebar -->
-    <aside id="rightSidebar" class="w-60 m-2 rounded-lg  transition-transform bg-black duration-300 transform ">
-        Right Sidebar
-    </aside>
+    <!-- <aside id="rightSidebar"
+        class="w-60 dark:bg-zinc-900 bg-white dark:text-gray-200 text-black transition-transform duration-300 transform">
 
- 
-    <script>
-        // JavaScript to toggle left sidebar
-        const leftSidebar = document.getElementById('leftSidebar');
-        const mainContent = document.getElementById('mainContent');
-        const toggleLeftSidebarButton = document.getElementById('toggleLeftSidebarButton');
 
-        toggleLeftSidebarButton.addEventListener('click', function () {
-            leftSidebar.classList.toggle('-translate-x-full');
-            mainContent.classList.toggle('-ml-60');
+    </aside> -->
+
+
+    <!-- <script src="{{url_for('static',path='./js/chat.js')}}"></script> -->
+    <script src="{{url_for('static',path='./js/sidebar.js')}}"></script>
+    <!-- <script src="{{url_for('static',path='./js/chat.js')}}"></script> -->
+    <script type="module">
+
+        import { marked } from "https://cdn.jsdelivr.net/npm/marked/lib/marked.esm.js";
+        const chatForm = document.getElementById('chat-form');
+        const userMessageInput = document.getElementById('user-message');
+        let previousHistory = ''; // Variable to store the previous history
+
+        chatForm.addEventListener('submit', async (event) => {
+            event.preventDefault();
+            const userMessage = userMessageInput.value;
+            console.log(userMessage);
+            userMessageInput.value = '';
+
+            await chatLLM(userMessage);
         });
 
-        // JavaScript to toggle right sidebar
-        const rightSidebar = document.getElementById('rightSidebar');
-        const toggleRightSidebarButton = document.getElementById('toggleRightSidebarButton');
 
-        toggleRightSidebarButton.addEventListener('click', function () {
-            rightSidebar.classList.toggle('translate-x-full');
-            mainContent.classList.toggle('-mr-60');
-        });
+        // Function to render Markdown text
+        const renderMarkdown = (text) => {
+            return marked(text);
+        };
+        // Update the updateStreamResponse function to render Markdown
+        const updateStreamResponse = (response) => {
+            const messagesList = document.getElementById('response-list');
+            const listItem = messagesList.lastElementChild || document.createElement('li');
+            messagesList.innerHTML = '';
+            // Append response to the existing list item's text content
+            listItem.textContent += response;
+
+            if (!messagesList.contains(listItem)) {
+                messagesList.appendChild(listItem);
+            }
+            messagesList.scrollTop = messagesList.scrollHeight;
+        };
+
+
+        // Update the updateMessages function to render Markdown
+        const updateMessages = (history) => {
+            const messagesList = document.getElementById('messages-list');
+
+            // Clear previous messages
+            messagesList.innerHTML = '';
+
+            // Create a grid container for each message
+            history.forEach(message => {
+                if (message.role !== "system") {
+                    const listItem = document.createElement('li');
+                    listItem.classList.add('message-item', 'grid', 'grid-cols-5', 'mb-2', 'p-2', 'rounded-md');
+
+                    listItem.classList.add(message.role === 'user' ? 'bg-purple-500' : 'dark:bg-gray-800');
+
+                    // Role column (20% width)
+                    const roleColumn = document.createElement('div');
+                    roleColumn.classList.add('font-bold', 'col-span-1', 'dark:text-white');
+                    roleColumn.textContent = message.role.toUpperCase() + ': ';
+
+                    // Content column (80% width)
+                    const contentColumn = document.createElement('div');
+                    contentColumn.classList.add('col-span-4', 'text-white');
+                    contentColumn.innerHTML = renderMarkdown(message.content); // Render content as Markdown
+
+                    listItem.appendChild(roleColumn);
+                    listItem.appendChild(contentColumn);
+
+                    if (message.role === 'terminal') {
+                        terminalList.innerHTML = '';
+                        terminalList.appendChild(listItem); // Append only the latest message
+                    } else {
+                        messagesList.appendChild(listItem);
+                    }
+                } else {
+                    systemPrompt.value = message.content;
+                }
+            });
+            messagesList.lastElementChild.scrollIntoView();
+        };
+
+
+
+
+        const chatLLM = async (userMessage) => {
+
+            // Remove the stream response list
+            const messagesList = document.getElementById('response-list');
+            messagesList.innerHTML = '';
+
+            try {
+                const response = await fetch('/v1/chat', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ message: userMessage })
+                });
+
+
+                const reader = response.body.getReader();
+                let partialMessage = '';
+                while (true) {
+                    const { done, value } = await reader.read();
+                    if (done) {
+                        break;
+                    }
+                    const chunk = new TextDecoder().decode(value);
+                    partialMessage += chunk;
+                    if (partialMessage.includes('\n')) {
+                        const messages = partialMessage.split('\n');
+                        partialMessage = messages.pop();
+                        for (const message of messages) {
+                            if (message) {
+                                const parsedMessage = JSON.parse(message);
+                                if (parsedMessage.content) {
+                                    updateStreamResponse(parsedMessage.content);
+
+                                }
+                                if (parsedMessage.history) {
+                                    updateMessages(parsedMessage.history);
+                                }
+                            }
+                        }
+                    }
+                }
+                console.log(response);
+            } catch (error) {
+                console.error('Error fetching chat:', error);
+            }
+        };
+
     </script>
+
 </body>
 
 </html>
